hphp/hack/test/typecheck/strict_switch/missing_null.php.exp
WARN: File "missing_null.php", line 7, characters 10-11:
Invalid case: This case will never match.
A value of type `null` can never be equal to a value of type `int` (Warn[12007])
ERROR: File "missing_null.php", line 6, characters 3-46:
This `switch` statement is nonexhaustive. At least the following cases are missing: `null` (Typing[4019])
  File "missing_null.php", line 6, characters 11-12:
  The scrutinee has type `null`.
